--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "scripts": {
+    "start": "node dist/index.js",
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "serve": "npm run build && npm start"
+  },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.24"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
