--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
