--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-# Cron (каждые 30 sec)
+# Cron (каждые 10 sec)
 CRON_SCHEDULE_TEST=0,10,20,30,40,50 * * * * *
+
+# Cron (раз в минуту)
+TEST_SCHEDULE_COUNTERS_REMIDNER=*/1 * * * *
 
 # reminders
 SCHEDULE_COUNTERS_REMIDNER=0 11 * * *
@@ -16,3 +19,6 @@ SCHEDULE_TELEGRAMM_SERVICE=
 SCHEDULE_EXPIRED_CONTRACTS=
 SCHEDULE_AUTO_INVOICING=
 
+
+# SYSTEM
+SCHEDULE_DEACTIVATE_CONTRACT=20 0 * * *
