update scheduler schedule

--- a/.env
+++ b/.env
@@ -4,21 +4,24 @@ CRON_SCHEDULE_TEST=0,10,20,30,40,50 * * * * *
 # Cron (раз в минуту)
 TEST_SCHEDULE_COUNTERS_REMIDNER=*/1 * * * *
 
-# reminders
-SCHEDULE_COUNTERS_REMIDNER=0 11 * * *
-# SCHEDULE_EMAIL_REMINDER=
-# SCHEDULE_TELEGRAMM_REMINDER=
-SCHEDULE_PAYMENT_REMIDER=0 12 * * *
+# services каждые 15 мин
 
-# services
-SCHEDULE_NOTIFICATION_SERVICE=1 * * * *
+SCHEDULE_NOTIFICATION_SERVICE=*/15 * * * *  
 SCHEDULE_EMAIL_SERVICE=
 SCHEDULE_TELEGRAMM_SERVICE=
 
+
+
+# reminders
+SCHEDULE_EXPIRED_CONTRACTS=0 13 * * *
+SCHEDULE_COUNTERS_REMINDER=0 11 * * *
+SCHEDULE_PAYMENT_REMINDER=0 12 * * *
+SCHEDULE_REQUEST_PAYMENT_REMINDER=0 14 * * *
+SCHEDULE_AUTO_INVOICING=0 9 * * *
+
 # Finance
-SCHEDULE_EXPIRED_CONTRACTS=
-SCHEDULE_AUTO_INVOICING=
+
 
 
 # SYSTEM
-SCHEDULE_DEACTIVATE_CONTRACT=20 0 * * *
+SCHEDULE_DEACTIVATE_CONTRACT=10 0 * * *
